# Trinity2D

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Editor/: CMakeLists.txt  EditorConfig.json  index.html
Editor/Assets/Editor/Scenes/: TestScene.json
Editor/Assets/Engine/Shaders/: SpriteRenderer.wgsl  Text.wgsl  TextRenderer.wgsl
Editor/Include/: Editor.h  EditorApp.h  EditorCache.h  EditorResources.h
Editor/Include/Core/: EditorApp.h  EditorCamera.h  EditorGizmo.h  EditorGrid.h  EditorLayout.h  EditorResources.h  EditorTheme.h  EditorWidget.h
Editor/Include/Utils/: EditorHelper.h
Editor/Include/Widgets/: AnimationPlayer.h  AssetBrowser.h  AssetFileDialog.h  ContextMenu.h  EditorMenu.h  Inspector.h  Menu.h  MenuBar.h  MessageBox.h  SceneHierarchy.h  SceneViewport.h  SelectionWindow.h  SpriteEditor.h  Viewport.h
Editor/Source/: Editor.cpp  EditorApp.cpp  EditorCache.cpp  EditorResources.cpp  EditorWidget.cpp
Editor/Source/Core/: EditorApp.cpp  EditorCamera.cpp  EditorGizmo.cpp  EditorGrid.cpp  EditorLayout.cpp  EditorResources.cpp  EditorTheme.cpp  EditorWidget.cpp
Editor/Source/Utils/: EditorHelper.cpp
Editor/Source/Widgets/: AnimationPlayer.cpp  AssetBrowser.cpp  AssetFileDialog.cpp  ContextMenu.cpp  EditorMenu.cpp  Inspector.cpp  Menu.cpp  MenuBar.cpp  MessageBox.cpp  SceneHierarchy.cpp  SceneViewport.cpp  SelectionWindow.cpp  Viewport.cpp
Engine/: CMakeLists.txt
Engine/Include/Audio/: AudioSystem.h  SoundBank.h  SoundEvent.h
Engine/Include/Core/: Application.h  Atlas.h  Clock.h  ConsoleApplication.h  Debugger.h  Image.h  Logger.h  ObjectCache.h  ObjectPool.h  Observer.h  Resource.h  ResourceCache.h  Singleton.h  Window.h
Engine/Include/Editor/: Editor.h  EditorLayout.h
Engine/Include/Graphics/: BatchRenderer.h  BindGroup.h  BindGroupLayout.h  Buffer.h  ComputePass.h  DebugHelper.h  FrameBuffer.h  GraphicsDevice.h  IndexBuffer.h  LineCanvas.h  Material.h  RenderPass.h  RenderPipeline.h  RenderTarget.h  Sampler.h  Shader.h  StorageBuffer.h  SwapChain.h  Texture.h  UniformBuffer.h  VertexBuffer.h  VertexLayout.h
Engine/Include/Gui/: Font.h  Gui.h  GuiRenderer.h  GuiSystem.h  ImGuiRenderer.h  TextRenderer.h  Widget.h  WidgetEvent.h  WidgetFactory.h  WidgetTransform.h
Engine/Include/Gui/Widgets/: Panel.h
Engine/Include/ImGui/: ImGuiFont.h  ImGuiRenderer.h
Engine/Include/Input/: Input.h  Keyboard.h  Mouse.h  Types.h
Engine/Include/Math/: BoundingRect.h  Math.h
Engine/Include/Particle/: Particle.h  ParticleEffect.h  ParticleEmitter.h  ParticlePool.h
Engine/Include/Physics/: CircleShape.h  Physics.h  RectangleShape.h  RigidShape.h
Engine/Include/Scene/: Component.h  ComponentFactory.h  Node.h  PhysicsSystem.h  QuadTree.h  RenderSystem.h  Scene.h  SceneRenderer.h  SceneSystem.h  Sprite.h  SpriteRenderer.h  TextureRenderer.h
Engine/Include/Scene/Components/: Camera.h  Collider.h  Light.h  RigidBody.h  Script.h  ScriptContainer.h  SpriteRenderable.h  TextureRenderable.h  Transform.h
Engine/Include/Scene/Components/Scripts/: CameraController.h  SpriteAnimator.h
Engine/Include/TileMap/: TileLayer.h  TileMap.h  TileSet.h
Engine/Include/Utils/: EmscriptenHelper.h  MacOSHelper.h  RandomGenerator.h  StringHelper.h  WindowsHelper.h
Engine/Include/VFS/: DiskFile.h  File.h  FileReader.h  FileSystem.h  FileWriter.h  Folder.h  Serializer.h  Storage.h
Engine/Source/Audio/: AudioSystem.cpp  SoundBank.cpp  SoundEvent.cpp
Engine/Source/Core/: Application.cpp  Atlas.cpp  Clock.cpp  ConsoleApplication.cpp  Debugger.cpp  Image.cpp  Logger.cpp  Resource.cpp  ResourceCache.cpp  Window.cpp
Engine/Source/Editor/: EditorLayout.cpp
Engine/Source/Graphics/: BatchRenderer.cpp  BindGroup.cpp  BindGroupLayout.cpp  Buffer.cpp  ComputePass.cpp  DebugHelper.cpp  FrameBuffer.cpp  GraphicsDevice.cpp  IndexBuffer.cpp  LineCanvas.cpp  Material.cpp  RenderPass.cpp  RenderPipeline.cpp  RenderTarget.cpp  Sampler.cpp  Shader.cpp  StorageBuffer.cpp  SwapChain.cpp  Texture.cpp  UniformBuffer.cpp  VertexBuffer.cpp  VertexLayout.cpp
Engine/Source/Gui/: Font.cpp  Gui.cpp  GuiRenderer.cpp  GuiSystem.cpp  ImGuiFont.cpp  ImGuiRenderer.cpp  TextRenderer.cpp  Widget.cpp  WidgetEvent.cpp  WidgetFactory.cpp  WidgetTransform.cpp
Engine/Source/Gui/Widgets/: Panel.cpp
Engine/Source/ImGui/: ImGuiFont.cpp  ImGuiRenderer.cpp
Engine/Source/Input/: Input.cpp  Keyboard.cpp  Mouse.cpp
Engine/Source/Math/: BoundingRect.cpp  Math.cpp
Engine/Source/Particle/: Particle.cpp  ParticleEffect.cpp  ParticleEmitter.cpp  ParticlePool.cpp
Engine/Source/Physics/: CircleShape.cpp  Physics.cpp  RectangleShape.cpp  RigidShape.cpp
Engine/Source/Scene/: Component.cpp  ComponentFactory.cpp  Node.cpp  PhysicsSystem.cpp  QuadTree.cpp  RenderSystem.cpp  Scene.cpp  SceneRenderer.cpp  SceneSystem.cpp  Sprite.cpp  SpriteRenderer.cpp  TextureRenderer.cpp
Engine/Source/Scene/Components/: Camera.cpp  Collider.cpp  Light.cpp  RigidBody.cpp  Script.cpp  ScriptContainer.cpp  SpriteRenderable.cpp  TextureRenderable.cpp  Transform.cpp
Engine/Source/Scene/Components/Scripts/: CameraController.cpp  SpriteAnimator.cpp
Engine/Source/TileMap/: TileLayer.cpp  TileMap.cpp  TileSet.cpp
Engine/Source/Utils/: EmscriptenHelper.cpp  MacOSHelper.mm  StringHelper.cpp  WindowsHelper.cpp
Engine/Source/VFS/: DiskFile.cpp  FileReader.cpp  FileSystem.cpp  FileWriter.cpp  Folder.cpp
Playground/: AppConfig.json  CMakeLists.txt  index.html  style.css
Playground/Include/: Playground.h  PlaygroundApp.h
Playground/Source/: Playground.cpp  PlaygroundApp.cpp
Tools/: CMakeLists.txt
Tools/TileMapEditor/: CMakeLists.txt
Tools/TileMapEditor/Assets/Engine/Shaders/: Colored.wgsl  Textured.wgsl
Tools/TileMapEditor/Assets/TileMaps/: TileMap1.json
Tools/TileMapEditor/Include/: TileMapEditorApp.h
Tools/TileMapEditor/Include/Widgets/: TileMapHierarchy.h  TileMapInspector.h  TileMapViewport.h  TileSetViewport.h
Tools/TileMapEditor/Source/: TileMapEditorApp.cpp
Tools/TileMapEditor/Source/Widgets/: TileMapHierarchy.cpp  TileMapInspector.cpp  TileMapViewport.cpp  TileSetViewport.cpp
(+52 files in other folders)
